# hunspell

./: CMakeLists.txt  hunspell_export_lib.pri
